# Dokdonia

./: .Rhistory  .gitignore  1_differential_expression.ipynb  2_clustering_deseq2.ipynb  3_clustering_tc.ipynb  Clean_Dokdonia.ipynb  Clean_Dokdonia_ULL.ipynb  CodeBox.ipynb  DE_Notebook-Copy1.ipynb  DE_Notebook.ipynb  Dokdonia.html  Dokdonia.ipynb  Dokdonia.py  Dokdonia_code.py  IS_counts.xlsx  NOTAS.txt  NOTES_DEEPGOPLUS.txt  Notas_proyecto.txt  README.md  RNotebook.ipynb  Results.ipynb  Super_Clean_Dokdonia.ipynb  classes.py  clean_results.ipynb  clust_normalization.ipynb  clusterProfiler.R  cluster_pathways.csv  deseq2_zscores.ipynb  dokdonia.ipynb  dokdonia_meeting.ipynb  environment.yml  failed_cluster_patterns.txt  gene_rankings_TPM.pkl  gene_rankings_transcripts_cell.pkl  nohup.out  p_KEGG_paths.pkl  p_KEGG_paths_100.pkl  p_KEGG_paths_40000.pkl  p_KEGG_paths_60000.pkl  paper_figures.ipynb  (+7 more)
.ipynb_checkpoints/: Clean_Dokdonia-checkpoint.ipynb  CodeBox-checkpoint.ipynb  DE_Notebook-checkpoint.ipynb  Dokdonia-checkpoint.ipynb  Dokdonia-checkpoint.py  Dokdonia_code-checkpoint.py  RNotebook-checkpoint.ipynb  Results-checkpoint.ipynb  Super_Clean_Dokdonia-checkpoint.ipynb  plt_styles-checkpoint.mplstyle  quant-checkpoint.R  rawDataPreprocessing-checkpoint.py  transcripts_cell-checkpoint.ipynb
Code/: Code.ipynb  dokdonia.txt  quant.R  quant.py  rawDataPreprocessing.py
Data/: .Rhistory  DokdoniaMED134.gtf  DokdoniaMED134_fake_MED134_01165.gtf  DokdoniaMED134_full.fasta  DokdoniaMED134_geneIDs.gtf  DokdoniaTPMCounts.RData  Dokdonia_transcripts_cell.csv  FragmentOfSAM.txt  (+7 more)
(+443 files in other folders)
